# music_download

./: .gitignore  README.md  REAMDE.md  start_backend.bat  start_backend.sh  start_electron.bat  start_electron.sh  start_frontend.bat  start_frontend.sh  start_login.sh  部署指南.md  项目结构文档demo.md
backend/: pyproject.toml  requirements.txt  测试数据.md
backend/app/: main.py
backend/app/api/: song.py
backend/app/core/: config.py
backend/app/credential/: get_credential.py  request_credential.py
backend/app/qqmusic/: client.py
backend/app/schemas/: common.py  response.py  song.py
backend/app/services/: song.py
backend/app/utils/: exception.py  logging.py
doc/: 项目结构文档.md
sys_electron/: electron.vite.config.js  main.js  menu.js  package-lock.json  package.json  preload.js
sys_python/: README.md  app.py  pyproject.toml  requirements.txt
sys_python/blueprint/: song.py
sys_python/common/: configure_logging.py  result.py
sys_python/credential/: get_credential.py  request_credential.py
sys_python/untils/: qqmusic_client.py  search_song.py  temp_song_detail.json  temp_song_urls.json
sys_vue/: .eslintrc.cjs  .prettierrc  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
sys_vue/src/: App.vue  main.js
sys_vue/src/api/: index.js  song.js
sys_vue/src/components/: ErrorDisplay.vue  LoadingSpinner.vue  MusicPlayer.vue  TitleBar.vue
sys_vue/src/router/: index.js
sys_vue/src/stores/: Song.js  index.js
sys_vue/src/utils/: request.js  toast.js
sys_vue/src/views/: Home.vue  Index.vue  LocalMusicGet.vue
(+12 files in other folders)
